# sdl-image-1.2-test

./: .gitignore  CMakeLists.txt  README.md  main.c
